022_structs/grade.txt
Grading at 09/10/2024:22:21:51.150694
For commit ID f4922c8fd39047f0659176451584468630982ced
Grading at Tue Sep 10 06:21:51 PM EDT 2024
First doing 'make clean'
rm -f vector *~
Now trying to build your code with 'make'
gcc -o vector -pedantic -std=gnu99 -Wall -Werror vector.c
vector.c: In function ‘dot_product’:
vector.c:7:12: error: unused variable ‘result’ [-Werror=unused-variable]
    7 |   vector_t result;
      |            ^~~~~~
cc1: all warnings being treated as errors
make: *** [Makefile:2: vector] Error 1
make seems to have failed.
Please fix any compiler errors and try again

Overall Grade: FAILED
